# aporte_mensal

./: README.md  pyproject.toml
extract/: main.py
extract/API/: cotation_collector.py
extract/contracts/: schema_cotation.py  schema_excel.py
extract/data/excel_source/: Asset.xlsx  excel_validator.py
